...
                OutlinedTextField(name, {
                    name = it
                }, label = {
                    Text(
                        stringResource(R.string.add_exact_item_name_label),
                    )
                }, modifier = Modifier.fillMaxWidth().testTag("continuous_scan_name"))
            } else if (pending is PendingScan.Existing) {
                Text(stringResource(R.string.scan_existing, pending.name))
            }
            if (pending !is PendingScan.Existing || !pending.isPresence) {
                OutlinedTextField(amount, {
                    amount = it
...
