appId: com.luisete.queda.e2e
---
- openLink: "queda-e2e://reset"
- tapOn:
    id: "inventory_add_button"
- tapOn:
    id: "add_exact_item_name_input"
- inputText: "Leche"
- tapOn:
    id: "add_exact_item_quantity_input"
- inputText: "1,25"
- hideKeyboard
- tapOn:
    id: "add_exact_item_unit_selector"
- tapOn: "Litros"
- tapOn:
    id: "add_exact_item_save_button"
- extendedWaitUntil:
    visible:
      id: "inventory_screen"
    timeout: 10000
- assertVisible: "Leche"
- assertVisible: "1,25 l"
