appId: com.luisete.queda.e2e
---
- openLink: "queda-e2e://reset"
- tapOn:
    id: "inventory_add_button"
- tapOn:
    id: "add_exact_item_name_input"
- inputText: "Yogur"
- tapOn:
    id: "add_exact_item_quantity_input"
- inputText: "4"
- hideKeyboard
- tapOn:
    id: "add_exact_item_unit_selector"
- tapOn: "Unidades"
- tapOn:
    id: "add_exact_item_save_button"
- extendedWaitUntil:
    visible:
      id: "inventory_screen"
    timeout: 10000
- tapOn:
    id: "inventory_add_button"
- tapOn:
    id: "add_exact_item_name_input"
- inputText: "Arroz"
- tapOn:
    id: "add_exact_item_quantity_input"
- inputText: "500"
- hideKeyboard
- tapOn:
    id: "add_exact_item_unit_selector"
- tapOn: "Gramos"
- tapOn:
    id: "add_exact_item_save_button"
- extendedWaitUntil:
    visible:
      id: "inventory_screen"
    timeout: 10000
- tapOn:
    id: "inventory_add_button"
- tapOn:
    id: "add_exact_item_name_input"
- inputText: "Leche"
- tapOn:
    id: "add_exact_item_quantity_input"
- inputText: "1"
- hideKeyboard
- tapOn:
    id: "add_exact_item_unit_selector"
- tapOn: "Litros"
- tapOn:
    id: "add_exact_item_save_button"
- extendedWaitUntil:
    visible:
      id: "inventory_screen"
    timeout: 10000
- assertVisible: "Arroz"
- assertVisible: "500 g"
- assertVisible: "Leche"
- assertVisible: "1 l"
- scrollUntilVisible:
    element: "Yogur"
- assertVisible: "Yogur"
- assertVisible: "4 ud"
