appId: com.luisete.queda.e2e
---
- openLink: "queda-e2e://reset"

- extendedWaitUntil:
    visible:
        id: "inventory_add_button"
    timeout: 30000

- tapOn:
    id: "inventory_add_button"

- tapOn:
    id: "add_exact_item_name_input"
- inputText: "Leche"

- tapOn:
    id: "add_exact_item_quantity_input"
- inputText: "10"
- hideKeyboard

- tapOn:
    id: "add_exact_item_unit_selector"
- tapOn: "Litros"

- tapOn:
    id: "add_exact_item_save_button"

- extendedWaitUntil:
    visible: "Leche"
    timeout: 30000

- assertVisible: "10 l"

- tapOn: "Leche"

- extendedWaitUntil:
    visible: "Consumir"
    timeout: 30000

- tapOn: "Consumir"

- extendedWaitUntil:
    visible: "Consumir alimento"
    timeout: 30000

- tapOn: "Cantidad"
- inputText: "3"
- hideKeyboard

- extendedWaitUntil:
    visible: "Quedarán 7 l"
    timeout: 30000

- tapOn: "Consumir"

- extendedWaitUntil:
    visible: "7 l"
    timeout: 30000

- assertVisible: "Leche"

- stopApp
- launchApp

- extendedWaitUntil:
    visible: "7 l"
    timeout: 30000

- assertVisible: "Leche"
